# MyTimeline

./: .gitignore  README.md  main.py  pyproject.toml
backend/: .env.example  .gitignore  main.py  pyproject.toml
backend/app/: config.py
backend/app/api/routes/: images.py  processing.py  timeline.py
backend/app/models/: __init__.py
backend/app/services/: exif_extractor.py  image_analyzer.py  image_scanner.py
backend/app/utils/: database.py
backend/scripts/: setup_db.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/ImageViewer/: ImageViewer.css  ImageViewer.jsx
frontend/src/components/Timeline/: Timeline.css  Timeline.jsx
frontend/src/services/: api.js
